--- a/src/components/home/groupproducts/group2.css
+++ b/src/components/home/groupproducts/group2.css
@@ -62,6 +62,7 @@
     min-height: 30px;
     line-height: 15px;
     text-transform: uppercase;
+    color: #212529;
 }
 .product-info .name {
     margin: 4px 0;
@@ -82,6 +83,9 @@
     font-weight: bold;
     min-height: 30px;
     line-height: 15px;
+}
+.group2ItemSwiper a{
+    text-decoration: none;
 }
 
 .group2ItemSwiper {
